Table inventories {
  id uuid [pk]
  material_id uuid [not null]
  branch_id uuid [not null]
  stock decimal(15, 4) [not null, default: 0, note: "Current stock level (Strictly in Base Unit)"]
  min_stock decimal(15, 4) [not null, default: 0, note: "Reorder point (Strictly in Base Unit)"]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp

  Indexes {
    // Unique constraint per Branch and Material
    (material_id, branch_id) [unique, name: 'idx_inventories_material_branch']
    
    branch_id [name: 'idx_inventories_branch_id']
    material_id [name: 'idx_inventories_material_id']
    deleted_at [name: 'idx_inventories_deleted_at']
  }
}

// Relationship to materials
Ref: inventories.material_id > materials.id

Table stock_movements {
  id uuid [pk]
  branch_id uuid [not null]
  material_id uuid [not null]
  type varchar(20) [not null, note: "STOCK_IN, STOCK_OUT, ADJUSTMENT, DEDUCTION"]
  quantity decimal(15, 4) [not null, note: "Normalized to Base Unit"]
  reference_id uuid [note: "Link to Order (Deduction) or Opname (Adjustment)"]
  note text
  created_at timestamp [default: `now()`]
  created_by uuid [not null]
  deleted_at timestamp

  Indexes {
    (branch_id, material_id) [name: "idx_stock_movements_branch_material"]
    (branch_id, created_at) [name: "idx_stock_movements_branch_created"]
    reference_id [name: "idx_stock_movements_reference_id"]
    deleted_at [name: "idx_stock_movements_deleted_at"]
  }
}

// Relationships
Ref: stock_movements.material_id > materials.id
Ref: stock_movements.branch_id > branches.id
Ref: stock_movements.created_by > users.id
